// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header File test File test Controls test modal content else, shouldn't show command hot keys 1`] = `
<div
  className="header-item"
>
  <div
    className="component-item"
  >
    <span
      className="item-title item-active"
      onClick={[Function]}
      onMouseOver={[Function]}
    >
      File
    </span>
  </div>
  <div
    className="item-content"
  >
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        New Scene
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Save Scene
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Undo
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Redo
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Controls
      </span>
    </div>
  </div>
  <article
    className="wonder-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Controls
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="content-field"
        >
          <div
            className="field-title"
          >
            focus
          </div>
          <div
            className="field-content"
          >
            f
          </div>
        </div>
        <div
          className="content-field"
        >
          <div
            className="field-title"
          >
            undo
          </div>
          <div
            className="field-content"
          >
            ctrl+z
          </div>
        </div>
      </div>
      <div
        className="modal-item-footer"
      >
        <button
          className="footer-submit"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </article>
</div>
`;

exports[`Header File test File test Controls test modal content if os is mac, should show command hot keys 1`] = `
<div
  className="header-item"
>
  <div
    className="component-item"
  >
    <span
      className="item-title item-active"
      onClick={[Function]}
      onMouseOver={[Function]}
    >
      File
    </span>
  </div>
  <div
    className="item-content"
  >
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        New Scene
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Save Scene
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Undo
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Redo
      </span>
    </div>
    <div
      className="content-section"
      onClick={[Function]}
    >
      <span
        className="section-header"
      >
        Controls
      </span>
    </div>
  </div>
  <article
    className="wonder-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Controls
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="content-field"
        >
          <div
            className="field-title"
          >
            focus
          </div>
          <div
            className="field-content"
          >
            f
          </div>
        </div>
        <div
          className="content-field"
        >
          <div
            className="field-title"
          >
            undo
          </div>
          <div
            className="field-content"
          >
            ctrl+z|command+z
          </div>
        </div>
      </div>
      <div
        className="modal-item-footer"
      >
        <button
          className="footer-submit"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </article>
</div>
`;
